# rag-pipeline

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  philippine_politician_rag_project_plan.md  pyproject.toml  vercel.json
api/: index.py
data/: metadata.json
scripts/: create_new_pinecone_index.py  download_samples.py  ingest.py
src/api/: main.py  models.py
src/rag/: chain.py  prompts.py
